<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/add"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/idRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/identificator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>


        <EditText
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/element" />


        <EditText
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place" />


        <EditText
            android:id="@+id/importance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/importance"
            android:inputType="number" />


        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/description" />
    </LinearLayout>
</RelativeLayout>
